# security-bot

./: .coveragerc  .dockerignore  .env.dev  .env.override.example  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTORS.md  Dockerfile  LICENSE.txt  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.yml  logging.yml  main.py  settings.py
app/exceptions/: api_errors.py  handlers.py  schemas.py
app/metrics/: celery.py  common.py  constants.py  http_in.py  http_out.py  job.py  server.py
app/metrics/db/: __init__.py  base.py  sqlalchemy.py
app/routers/: gitlab.py  healthcheck.py  metrics.py  security.py
app/secbot/: __init__.py  alembic.ini  config.py  exceptions.py  handlers.py  logger.py  schemas.py  settings.py  utils.py
app/secbot/db/: __init__.py  models.py
app/secbot/db/alembic/: env.py
app/secbot/inputs/: __init__.py
app/secbot/inputs/gitlab/: __init__.py  dependencies.py  models.py  services.py  utils.py
docs/: conf.py  configuration.rst  getting-started.rst  glossary.rst  index.rst  integration.rst
docs/images/: general-scheme.drawio  job-graph.drawio
k8s/: configmap.yml  deployment.yml  ingress.yml  sec-bot-tls-certs.yml  service.yml
tests/: conftest.py  pytest.ini  test_logger.py  test_sentry.py  test_settings.py
tests/fixtures/: merge_request_hook__example_project.json  merge_request_hook__public_site.json  merge_request_hook__security_bot.json
tests/fixtures/inputs/gitlab/: merge_request_webhook.json  push_webhook.json  tag_push_webhook.json
tests/fixtures/worker_outputs/: gitleaks.json
tests/integration/: test_outputs.py
tests/integration/notifications/: test_slack.py
tests/units/: common.py  factories.py  test_pydantic_celery.py  test_worker_utils.py
tests/units/config/: test_config_v1_parser.py  test_secbot_config_version.py
tests/units/inputs/: conftest.py
tests/units/inputs/config/: test_config_utils.py  test_parse_jobs.py
tests/units/inputs/gitlab/: test_defectdojo_validation.py  test_gitlab_dependencies.py  test_gitlab_project_languages.py  test_gitlab_routes.py  (+4 more)
tests/units/secbot/: test_autodiscover.py  test_register.py
tests/units/workflow/: test_workflow_runner.py
(+16 files in other folders)
